--- a/app/views/enterpreneurs/index.html.erb
+++ b/app/views/enterpreneurs/index.html.erb
@@ -1,18 +1,17 @@
 <div id="home">
 <div class="row">
 
-  <!-- INFLUENCERS -->
   <div id="companies" class="col-12 margin-bottom-lg">
     <table>
       <% @enterpreneurs.each do |user| %>
         <tr>
           <td>
-            <%= link_to member_path(id: user.user.id) do %>
+            <%= link_to user_path(id: user.user.id) do %>
               <div class="image"><%= image_tag user.user.avatar %></div>
             <% end -%>
           </td>
           <td class="width-100">
-            <%= link_to member_path(id: user.user.id) do %>
+            <%= link_to user_path(id: user.user.id) do %>
               <div class="name"><%= user.user["first_name"] %> <%= user.user["last_name"] %></div>
             <% end -%>
           </td>
@@ -23,8 +22,6 @@
 
     <%= will_paginate @enterpreneurs %>
   </div>
-
-
 
 </div>
 </div>
