--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,25 +1,25 @@
-<button class="btn btn-sm btn-secondary" disabled="true">Profile</button>
 <% if current_user.id == @user.id %>
+<div id="member">
 <a href="<%= edit_user_path(@user) %>"><button class="btn btn-sm btn-primary">Edit profile</button></a>
+</div>
+
+<br>
 <% end %>
 
-<hr />
-
-<table class="table">
-  <tr>
-    <td class="col-sm-3 col-md-2 label">First name</td>
-    <td class="col-sm-9 col-md-10"><%= @user["first_name"] %></td>
-  </tr>
-  <tr>
-    <td class="label">Last name</td>
-    <td><%= @user["last_name"] %></td>
-  </tr>
-  <tr>
-    <td class="label">Email</td>
-    <td><%= @user["email"] %></td>
-  </tr>
-  <tr>
-    <td class="label">Picture</td>
-    <td><div class="image"><%= image_tag @user.avatar %></div></td>
-  </tr>
-</table>
+<div id="member">
+  <h2><%= @user[:first_name] %> <%= @user[:last_name] %></h2>
+  <table>
+    <tbody>
+      <tr>
+        <td class="image-wrapper">
+          <div class="image"><%= image_tag @user.avatar %></div>
+        </td>
+        <td class="content width-100">
+          <% if current_user.id == @user.id %>
+            <%= @user[:email] %>
+          <% end -%>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+</div>
