add translations | update way of registering companies and projects

--- a/app/assets/stylesheets/companies.scss
+++ b/app/assets/stylesheets/companies.scss
@@ -1,5 +1,5 @@
 $enterpreneurs-color: #057cbc;
-$enterpreneurs-color-hover: #0e9bcb;
+$enterpreneurs-color-hover: #1881ba;
 
 #company {
   .subtitle {
