--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -3,7 +3,7 @@
 // You can use Sass (SCSS) here: https://sass-lang.com/
 
 $enterpreneurs-color: #057cbc;
-$enterpreneurs-color-hover: #0e9bcb;
+$enterpreneurs-color-hover: #1881ba;
 
 $projects-color: #9cce0b;
 $projects-color-hover: #a7d114;
