--- a/app/views/home/lists.html.erb
+++ b/app/views/home/lists.html.erb
@@ -35,7 +35,7 @@
       <% end -%>
     </table>
 
-    <a href="/enterpreneurs">
+    <a href="/companies">
       <div class="company padding-sm margin-bottom-sm text-center">
         <%= t('home.lists.all_companies') %>
       </div>
