--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,3 +1,4 @@
+<div id="sign-up-wrapper">
 <div id="sign-up">
 <h2 class="text-center margin-bottom-md margin-top-sm">Project</h2>
 
@@ -52,6 +53,7 @@
      Enkel leden kunnen een projectvoorstel indienen. Gelieve <a class="highlight" href="/sessions/login">je in te loggen</a> of <a class="highlight" href="/users/new">je te registreren</a>.
     </div>
   <% end %>
+</div>
 </div>
 
 
