--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,7 +18,7 @@
 @import "font-awesome";
 
 $enterpreneurs-color: #057cbc;
-$enterpreneurs-color-hover: #0e9bcb;
+$enterpreneurs-color-hover: #1881ba;
 
 $projects-color: #9cce0b;
 $projects-color-hover: #a7d114;
@@ -220,10 +220,8 @@ h2 {
 }
 
 .alert {
-    margin-left: 82px;
-    margin-right: 30px;
-    margin-top: 30px;
-    padding: 20px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .label {
@@ -289,4 +287,8 @@ h2 {
   margin-left: 10px;
   font-family: "Flexo-Bold";
   font-size: 20px;
+}
+
+#flash-alert {
+  margin-top: 60px;
 }
