--- a/app/views/home/home.html.erb
+++ b/app/views/home/home.html.erb
@@ -1,5 +1,5 @@
 <div class="quote">
-  <em>"HET KLIMAAT REDDEN DOEN WE SAMEN"</em>
+  <em><%= t('home.home.saving_the_planet_title') %></em>
 </div>
 
 <section id="companies">
@@ -8,14 +8,14 @@
       <%= image_tag "enterpreneurs-icon.png", class: "group-icon" %>
     </div>
     <div class="col-10">
-      <h3 class="title">Ondernemers</h3>
+      <h3 class="title"><%= t('home.home.companies') %></h3>
 
       <div class="body">
-        <span class="strong">All 4 1 planet-ondernemers</span> zijn ondernemers die een klein percentage van hun winst (bij uitkering van dividenden of verkoop van aandelen) afgeven om te investeren in onze All 4 1 planet-projecten. Daarvoor krijgen ze aandacht op ons platform, maar ook de eeuwige dank en de onverwaardelijke steun van onze leden voor terug. Uiteraard hebben ze ook een groot aandeel in het beslissen in welke projecten er geïnvesteerd wordt.
+        <%= t('home.home.companies_description_html') %>
       </div>
 
       <div class="link">
-        <%= link_to "All41Planet ondernemer worden?", new_user_path("company": true), data: { turbolinks: false } %>
+        <%= link_to t('home.home.companies_subscription'), new_user_path("company": true), data: { turbolinks: false } %>
       </div>
     </div>
   </div>
@@ -27,14 +27,14 @@
       <%= image_tag "members-icon.png", class: "group-icon" %>
     </div>
     <div class="col-10">
-      <h3 class="title">Leden</h3>
+      <h3 class="title"><%= t('home.home.members') %></h3>
 
       <div class="body">
-        <span class="strong">IEDEREEEN</span> kan een <span class="strong">All 4 1 planet-lid</span> worden. Leden bepalen mee welke projecten gesteund worden en hoeveel geld er naar toe gaat. Ze steunen onze ondernemers en mochten ze willen, kunnen ze ook zelf een steentje bijdragen.
+        <%= t('home.home.members_description_html') %>
       </div>
 
       <div class="link">
-        <%= link_to "All41Planet lid worden?", new_user_path, data: { turbolinks: false } %>
+        <%= link_to t('home.home.members_subscription'), new_user_path, data: { turbolinks: false } %>
       </div>
     </div>
   </div>
@@ -46,13 +46,13 @@
       <%= image_tag "projects-icon.png", class: "group-icon" %>
     </div>
     <div class="col-10">
-      <h3 class="title">Projecten</h3>
+      <h3 class="title"><%= t('home.home.projects') %></h3>
       <div class="body">
-        <span class="strong">All 4 1 planet-projecten</span> projecten die bijdragen aan een beter klimaat. Iedereen kan een projectaanvraag indienen maar het zijn onze ondernemers en leden die bepalen welke projecten geselecteerd worden en welke bedrag er naar toe gaat.
+        <%= t('home.home.projects_description_html') %>
       </div>
 
       <div class="link">
-        <%= link_to "All41Planet project indienen?", new_user_path("project": true), data: { turbolinks: false } %>
+        <%= link_to t('home.home.projects_subscription'), new_user_path("project": true), data: { turbolinks: false } %>
       </div>
     </div>
   </div>
