--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -24,7 +24,7 @@
     </table>
   </div>
 
-  <% if !@projects.count != 0 %>
+<% if @projects.count != 0 %>
   <h4>Projects</h4>
 
   <table class="table margin-bottom-md">
