update storage to cloudinary

--- a/app/views/home/lists.html.erb
+++ b/app/views/home/lists.html.erb
@@ -79,7 +79,7 @@
 
     <% unless current_user %>
       <div class="text-center">
-        <%= link_to "+ All41Planet lid worden", new_user_path, data: { turbolinks: false } %>
+        <%= link_to t('home.lists.become_member'), new_user_path, data: { turbolinks: false } %>
       </div>
     <% end %>
   </div>
